// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select Cascader Select 1`] = `
<Select
  cols={Infinity}
  dataSource={
    Array [
      Object {
        "children": Array [
          Object {
            "label": "选项一",
            "value": "11",
          },
          Object {
            "label": "选项二",
            "value": "12",
          },
        ],
        "label": "选项一",
        "value": "1",
      },
      Object {
        "children": Array [
          Object {
            "label": "选项一",
            "value": "21",
          },
          Object {
            "label": "选项二",
            "value": "22",
          },
        ],
        "label": "选项一",
        "value": "2",
      },
    ]
  }
  displayRender={[Function]}
  itemRender={[Function]}
  onClick={[Function]}
  placeholder="请选择"
  prefixCls="za-select"
  valueMember="value"
>
  <div
    className="za-select za-select--placeholder"
    onClick={[Function]}
  >
    <div
      className="za-select__input"
    >
      请选择
    </div>
    <Picker
      cancelText="取消"
      cols={Infinity}
      dataSource={
        Array [
          Object {
            "children": Array [
              Object {
                "label": "选项一",
                "value": "11",
              },
              Object {
                "label": "选项二",
                "value": "12",
              },
            ],
            "label": "选项一",
            "value": "1",
          },
          Object {
            "children": Array [
              Object {
                "label": "选项一",
                "value": "21",
              },
              Object {
                "label": "选项二",
                "value": "22",
              },
            ],
            "label": "选项一",
            "value": "2",
          },
        ]
      }
      itemRender={[Function]}
      okText="确定"
      onCancel={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onOk={[Function]}
      onTransition={[Function]}
      prefixCls="za-picker"
      title="请选择"
      valueMember="value"
      visible={false}
    >
      <Popup
        onMaskClick={[Function]}
        visible={false}
      >
        <Portal
          animationDuration={200}
          autoClose={false}
          direction="bottom"
          handlePortalUnmount={[Function]}
          mask={true}
          maskType="normal"
          onMaskClick={[Function]}
          prefixCls="za-popup"
          stayTime={3000}
          visible={false}
        />
      </Popup>
    </Picker>
  </div>
</Select>
`;

exports[`Select Cascader Select init value 1`] = `
<Select
  cols={Infinity}
  dataSource={
    Array [
      Object {
        "children": Array [
          Object {
            "label": "选项一",
            "value": "11",
          },
          Object {
            "label": "选项二",
            "value": "12",
          },
        ],
        "label": "选项一",
        "value": "1",
      },
      Object {
        "children": Array [
          Object {
            "label": "选项一",
            "value": "21",
          },
          Object {
            "label": "选项二",
            "value": "22",
          },
        ],
        "label": "选项一",
        "value": "2",
      },
    ]
  }
  displayAddon="-"
  displayRender={[Function]}
  itemRender={[Function]}
  onClick={[Function]}
  placeholder="请选择"
  prefixCls="za-select"
  value={
    Array [
      "1",
      "12",
    ]
  }
  valueMember="value"
>
  <div
    className="za-select"
    onClick={[Function]}
  >
    <div
      className="za-select__input"
    >
      选项一
      选项二
    </div>
    <Picker
      cancelText="取消"
      cols={Infinity}
      dataSource={
        Array [
          Object {
            "children": Array [
              Object {
                "label": "选项一",
                "value": "11",
              },
              Object {
                "label": "选项二",
                "value": "12",
              },
            ],
            "label": "选项一",
            "value": "1",
          },
          Object {
            "children": Array [
              Object {
                "label": "选项一",
                "value": "21",
              },
              Object {
                "label": "选项二",
                "value": "22",
              },
            ],
            "label": "选项一",
            "value": "2",
          },
        ]
      }
      displayAddon="-"
      itemRender={[Function]}
      okText="确定"
      onCancel={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onOk={[Function]}
      onTransition={[Function]}
      prefixCls="za-picker"
      title="请选择"
      value={
        Array [
          "1",
          "12",
        ]
      }
      valueMember="value"
      visible={false}
    >
      <Popup
        onMaskClick={[Function]}
        visible={false}
      >
        <Portal
          animationDuration={200}
          autoClose={false}
          direction="bottom"
          handlePortalUnmount={[Function]}
          mask={true}
          maskType="normal"
          onMaskClick={[Function]}
          prefixCls="za-popup"
          stayTime={3000}
          visible={false}
        />
      </Popup>
    </Picker>
  </div>
</Select>
`;

exports[`Select Select 1`] = `
<Select
  cols={Infinity}
  dataSource={
    Array [
      Object {
        "label": "选项一",
        "value": "1",
      },
      Object {
        "label": "选项二",
        "value": "2",
      },
    ]
  }
  displayRender={[Function]}
  itemRender={[Function]}
  onClick={[Function]}
  placeholder="请选择"
  prefixCls="za-select"
  valueMember="value"
>
  <div
    className="za-select za-select--placeholder"
    onClick={[Function]}
  >
    <div
      className="za-select__input"
    >
      请选择
    </div>
    <Picker
      cancelText="取消"
      cols={Infinity}
      dataSource={
        Array [
          Object {
            "label": "选项一",
            "value": "1",
          },
          Object {
            "label": "选项二",
            "value": "2",
          },
        ]
      }
      itemRender={[Function]}
      okText="确定"
      onCancel={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onOk={[Function]}
      onTransition={[Function]}
      prefixCls="za-picker"
      title="请选择"
      valueMember="value"
      visible={false}
    >
      <Popup
        onMaskClick={[Function]}
        visible={false}
      >
        <Portal
          animationDuration={200}
          autoClose={false}
          direction="bottom"
          handlePortalUnmount={[Function]}
          mask={true}
          maskType="normal"
          onMaskClick={[Function]}
          prefixCls="za-popup"
          stayTime={3000}
          visible={false}
        />
      </Popup>
    </Picker>
  </div>
</Select>
`;

exports[`Select render defaultValue correctly  1`] = `
<Select
  cols={Infinity}
  dataSource={
    Array [
      Object {
        "label": "选项一",
        "value": "1",
      },
      Object {
        "label": "选项二",
        "value": "2",
      },
    ]
  }
  defaultValue="2"
  displayRender={[Function]}
  itemRender={[Function]}
  onClick={[Function]}
  placeholder="请选择"
  prefixCls="za-select"
  valueMember="value"
>
  <div
    className="za-select za-select--placeholder"
    onClick={[Function]}
  >
    <div
      className="za-select__input"
    >
      请选择
    </div>
    <Picker
      cancelText="取消"
      cols={Infinity}
      dataSource={
        Array [
          Object {
            "label": "选项一",
            "value": "1",
          },
          Object {
            "label": "选项二",
            "value": "2",
          },
        ]
      }
      defaultValue="2"
      itemRender={[Function]}
      okText="确定"
      onCancel={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onOk={[Function]}
      onTransition={[Function]}
      prefixCls="za-picker"
      title="请选择"
      valueMember="value"
      visible={false}
    >
      <Popup
        onMaskClick={[Function]}
        visible={false}
      >
        <Portal
          animationDuration={200}
          autoClose={false}
          direction="bottom"
          handlePortalUnmount={[Function]}
          mask={true}
          maskType="normal"
          onMaskClick={[Function]}
          prefixCls="za-popup"
          stayTime={3000}
          visible={false}
        />
      </Popup>
    </Picker>
  </div>
</Select>
`;
